# WebDevPractice2

./: .gitignore  LICENSE  snap-hello-world.cabal  stack.yaml
src/: Main.hs
static/: index.css  index.js
views/: index.html
