name:                snap-hello-world
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/richardsouthwell/snap-hello-world#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Southwell
maintainer:          richardsouthwell254@gmail.com
copyright:           Richard Southwell
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable snap-hello-world
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, snap-core, snap-server
